syntax = "proto3";
package measurement;

import "google/protobuf/empty.proto";
import "room.proto";

option go_package = ".;pb"; 

// 測定値の種類
enum MeasurementType {
    TEMPERATURE       = 0;  // 温度
    HUMIDITY          = 1;  // 湿度
    AIR_PRESSURE      = 2;  // 気圧
    CO2_CONCENTRATION = 3;  // CO2濃度
}

// 測定値メッセージの定義
message Measurement {
    room.RoomNumbers room_number = 1;  // 部屋番号
    MeasurementType type = 2;  // 測定値の種類
    float value = 3;  // 実際の測定値
    int64 datetime = 4;  // 測定した時間(unix_time)
}

message MeasurementRequest {
    MeasurementType type = 1;
}

message MeasurementResponse {
    Measurement measurement = 1;
    string message = 2;
    bool error = 3;
}

service MeasurementRecorder {
    rpc Get (MeasurementRequest) returns (MeasurementResponse) {}
    rpc GetAll (google.protobuf.Empty) returns (stream MeasurementResponse) {}
}